# HaskellMusicEngine

./: .gitignore  HaskellMusicEngine.cabal  README.md  haskell-codeworld-template.cabal  my-midi.mid  package.yaml  sample_composition.txt
app/: Common.hs  Main.hs  MelodyMidi.hs  Midi.hs  SampleModule.hs  Sprites.hs  TOP.hs  Transposed.hs  TxtCompositionParser.hs
app/Renderer/: ExtraLines.hs  Renderer.hs  Translators.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: package.cache
images/: Midi-example.mid  Notation-example.txt
src/: Project.hs  main.hs
