cabal-version:      2.4
name:               HaskellMusicEngine
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
-- author:
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable HaskellMusicEngine
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Common
        SampleModule

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    hs-source-dirs:   app
    ghc-options: -Wall -fno-warn-type-defaults -threaded -rtsopts -with-rtsopts=-N
    build-depends:
         base >=4.7 && < 5
      ,  strings == 1.1
      ,  codeworld-api
    default-language: Haskell2010
